Update email to richard@alaqsatransllc.com, add SMS Terms & Conditions links in footer and Terms page

--- a/services.html
+++ b/services.html
@@ -239,7 +239,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
