--- a/sms-terms.html
+++ b/sms-terms.html
@@ -110,7 +110,7 @@
           </p>
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
             <li><strong>Texting "STOP"</strong> to the number from which you received the message</li>
-            <li><strong>Emailing us</strong> at <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a> with your phone number and request to opt out</li>
+            <li><strong>Emailing us</strong> at <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a> with your phone number and request to opt out</li>
             <li><strong>Calling us</strong> at <a href="tel:6199448954">(619) 944-8954</a> and requesting to opt out</li>
             <li><strong>Replying "UNSUBSCRIBE"</strong> to any text message we send</li>
           </ul>
@@ -126,7 +126,7 @@
           </p>
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
             <li><strong>Text "HELP"</strong> to the number from which you received the message</li>
-            <li><strong>Email us</strong> at <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></li>
+            <li><strong>Email us</strong> at <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a></li>
             <li><strong>Call us</strong> at <a href="tel:6199448954">(619) 944-8954</a></li>
             <li><strong>Visit our</strong> <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-of-service.html">Terms and Conditions</a> pages</li>
           </ul>
@@ -171,7 +171,7 @@
             16038 3rd PI S Unit c<br>
             Burien, WA 98148<br>
             Phone: <a href="tel:6199448954">(619) 944-8954</a><br>
-            Email: <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a>
+            Email: <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a>
           </p>
 
         </div>
@@ -209,7 +209,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
