--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -114,6 +114,14 @@
             to use our services.
           </p>
 
+          <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">SMS Terms & Conditions</h2>
+          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
+            If you choose to receive SMS/text messages from Al Aqsa Auto Transport, you agree to be bound by our 
+            <a href="sms-terms.html" style="color: #426fcf; text-decoration: underline;">SMS Terms & Conditions</a>. 
+            Please review our SMS Terms & Conditions for information about message frequency, opt-out procedures, 
+            message and data rates, and how your phone number will be used.
+          </p>
+
           <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">Dispute Resolution</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
             Any disputes arising from these terms or our services shall be resolved through binding arbitration in 
@@ -136,7 +144,7 @@
             16038 3rd PI S Unit c<br>
             Burien, WA 98148<br>
             Phone: <a href="tel:6199448954">(619) 944-8954</a><br>
-            Email: <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a>
+            Email: <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a>
           </p>
 
         </div>
@@ -174,7 +182,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
