--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <h3>24/7 Support</h3>
                 <p>Round-the-clock assistance. <br> Our team is always ready <br> to help with any questions <br> or concerns
                 </p>
-                <a href="mailto:decam9@hotmail.com">Contact Support</a>
+                <a href="mailto:richard@alaqsatransllc.com">Contact Support</a>
               </div>
             </div>
           </div>
@@ -452,7 +452,7 @@
           <div class="footer-box padding-footer">
             <h3>Contact Info</h3>
             <h4><i class="fa-solid fa-phone"></i> <a href="tel:6199448954">619-944-8954</a></h4>
-            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:decam9@hotmail.com">decam9@hotmail.com</a></h4>
+            <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:richard@alaqsatransllc.com">richard@alaqsatransllc.com</a></h4>
             <h4><i class="fa-solid fa-location-dot"></i> 16038 3rd PI S Unit c <br> Burien, WA 98148</h4>
           </div>
         </div>
