--- a/sms-terms.html
+++ b/sms-terms.html
@@ -93,12 +93,10 @@
 
           <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">5. Opt-In Method</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 15px;">
-            You may opt-in to receive SMS messages from Al Aqsa Auto Transport in the following ways:
+            You may opt-in to receive SMS messages from Al Aqsa Auto Transport in the following way:
           </p>
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
             <li>By checking the SMS consent checkbox when submitting an online quote form on our website</li>
-            <li>By providing explicit consent during a phone call with our customer service team</li>
-            <li>By texting a keyword to our SMS short code (if applicable)</li>
           </ul>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
             By opting in, you acknowledge that you have read, understood, and agree to these SMS Terms & Conditions.
