--- a/sms-terms.html
+++ b/sms-terms.html
@@ -98,9 +98,9 @@
           <ul style="font-size: 16px; line-height: 1.8; margin-bottom: 30px; padding-left: 30px;">
             <li>By checking the SMS consent checkbox when submitting an online quote form on our website</li>
           </ul>
-          <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
+          <!-- <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
             By opting in, you acknowledge that you have read, understood, and agree to these SMS Terms & Conditions.
-          </p>
+          </p> -->
 
           <h2 style="color: #426fcf; margin-top: 40px; margin-bottom: 20px;">6. Opt-Out Method</h2>
           <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px;">
